--- a/xuanzhuan/templates/add_table/list.html.j2
+++ b/xuanzhuan/templates/add_table/list.html.j2
@@ -10,5 +10,10 @@
   <input type="submit" value="検索" name="search"/><br>
   <span>ページネーション</span><br>
   <span>検索結果</span><br>
+  <table th:if="*{#lists.isEmpty(rows)}">
+    <tr th:each="row, rs: *{rows}">
+      <td th:text="${rs.count}" />
+    </tr>
+  <table>
 </form>
 
