--- a/xuanzhuan/templates/add_table/list.html.j2
+++ b/xuanzhuan/templates/add_table/list.html.j2
@@ -10,7 +10,7 @@
   <input type="submit" value="検索" name="search"/><br>
   <span>ページネーション</span><br>
   <span>検索結果</span><br>
-  <table th:unless="*{#lists.isEmpty(rows)}">
+  {% raw -%}<table th:unless="*{#lists.isEmpty(rows)}">{%- endraw %}
     <tr th:each="row, rs: *{rows}">
       <td th:text="${rs.count}" />
     </tr>
