--- a/xuanzhuan/templates/add_table/register.html.j2
+++ b/xuanzhuan/templates/add_table/register.html.j2
@@ -3,6 +3,6 @@
 <h1>登録ページ</h1>
 <form th:action="@{/{{table.name | to_lower_camel_case}}/register}" method="post" th:object="${% raw %}{{% endraw %}{{table.name | to_lower_camel_case}}DetailForm}">{% for column in table.columnList %}
   <input type="text" th:field="*{% raw %}{{% endraw %}{{column.langName}}}" /><br>{% endfor %}
-  <input type="submit" value="登録" />
+  <input type="submit" value="登録" name="register"/>
 </form>
 
