「javax」から「jakarta」に戻す

--- a/xuanzhuan/templates/add_table/SearchDao.java.j2
+++ b/xuanzhuan/templates/add_table/SearchDao.java.j2
@@ -7,9 +7,9 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.persistence.EntityManager;
-import javax.persistence.PersistenceContext;
-import javax.persistence.Query;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.Query;
 
 {% set key="SearchDao" %}import {{import_dict[key]}};
 
