--- a/xuanzhuan/templates/add_table/SearchParams.java.j2
+++ b/xuanzhuan/templates/add_table/SearchParams.java.j2
@@ -3,9 +3,9 @@ package {{package}};
 import java.util.HashMap;
 import java.util.Map;
 
-import javax.persistence.Column;
-import javax.persistence.Entity;
-import javax.persistence.Id;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
 import lombok.Data;
 
 // 検索パラメータ共通クラス
